# template-dev-repo

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  mypy.ini  pyproject.toml
