[tool.poetry]
name = "hs-Recommender"
version = "0.1.0"
description = "HomeScreen Recommender"
readme = "README.md"
authors = [
    "Omar Chimère NDIAYE <omchimere@gmail.com"
    ]


[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.3"
mypy = "^1.2.0"
black = "^23.3.0"
gcsfs = "^2023.4.0"
commitizen = "^3.1.0"
pre-commit = "^3.6.0"
autoflake = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"